testing/tests/ui/lit_on_assignment_lhs.stderr
error: Cannot have literals on the left-hand-side of an assignment.
 --> tests/ui/lit_on_assignment_lhs.rs:5:14
  |
5 |     source = "{%let 7=x%}",
  |              ^^^^^^^^^^^^^
